my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/pr64242.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr64242.c:12:3: error: __builtin_longjmp is not supported for the current target
   12 |   __builtin_longjmp (buf, 1);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/pr64242.c:25:8: error: __builtin_setjmp is not supported for the current target
   25 |   if (!__builtin_setjmp (buf))
      |        ^~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
